[gd_scene load_steps=58 format=3 uid="uid://ddfx5f0gkgo2m"]

[ext_resource type="Script" path="res://main.gd" id="1_e6bej"]
[ext_resource type="Texture2D" uid="uid://bhqnw367mfm13" path="res://asset/LAIMap7b.jpg" id="1_j84c4"]
[ext_resource type="Script" path="res://map/pathSpawner.gd" id="2_w5tr5"]
[ext_resource type="Texture2D" uid="uid://wv6suhpj0fmm" path="res://asset/LAIMap10A.jpg" id="3_yplv2"]
[ext_resource type="PackedScene" uid="uid://bmqskontyrf81" path="res://hud/hud.tscn" id="4_ygiq2"]
[ext_resource type="Texture2D" uid="uid://dsua6tdfxxnnm" path="res://asset/explosion.png" id="5_axm57"]
[ext_resource type="Texture2D" uid="uid://bpe0js40kwg3m" path="res://asset/house4_complete4A.png" id="6_4hhcv"]
[ext_resource type="Texture2D" uid="uid://bdytulhdxjrj1" path="res://asset/house4_1B.png" id="6_jaofj"]
[ext_resource type="PackedScene" uid="uid://cbaiyt7ovkx6v" path="res://map/install_location1.tscn" id="7_nspia"]
[ext_resource type="Texture2D" uid="uid://drwidjydoopnn" path="res://asset/pulse.png" id="9_ihiuv"]
[ext_resource type="Texture2D" uid="uid://bbm0a1isvnj80" path="res://asset/dollar.png" id="10_5q32s"]
[ext_resource type="Texture2D" uid="uid://c25fme3fbk20c" path="res://asset/flag animation.png" id="11_pw7i6"]
[ext_resource type="Texture2D" uid="uid://d1y1o8s504lji" path="res://asset/1.png" id="12_ifdj0"]
[ext_resource type="Texture2D" uid="uid://c37eeqwvr31t7" path="res://asset/2.png" id="13_gdg0n"]
[ext_resource type="Texture2D" uid="uid://cjpxei705pstc" path="res://asset/3.png" id="14_onel5"]
[ext_resource type="Texture2D" uid="uid://da8i78jp8shso" path="res://asset/4.png" id="15_28rd8"]
[ext_resource type="Texture2D" uid="uid://byx3o2gyfe7vl" path="res://asset/5.png" id="16_arfr6"]
[ext_resource type="Texture2D" uid="uid://blgrtd0pacib" path="res://asset/6.png" id="17_dxtmf"]
[ext_resource type="Texture2D" uid="uid://bhqtfaxn8yamd" path="res://asset/finger.png" id="18_mst1w"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_265om"]
texture = ExtResource("1_j84c4")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
4:5/0/terrain_set = 0
5:5/0 = 0
5:5/0/terrain_set = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
14:5/0/terrain_set = 0
15:5/0 = 0
15:5/0/terrain_set = 0
16:5/0 = 0
17:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
4:6/0/terrain_set = 0
5:6/0 = 0
5:6/0/terrain_set = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0

[sub_resource type="TileSet" id="TileSet_l6b0e"]
tile_size = Vector2i(64, 64)
terrain_set_0/mode = 0
sources/0 = SubResource("TileSetAtlasSource_265om")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_44df8"]
texture = ExtResource("3_yplv2")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0

[sub_resource type="TileSet" id="TileSet_1y2bj"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_44df8")

[sub_resource type="AtlasTexture" id="AtlasTexture_al4ul"]
atlas = ExtResource("5_axm57")
region = Rect2(0, 0, 53, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0fk2"]
atlas = ExtResource("5_axm57")
region = Rect2(53, 0, 53, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rq665"]
atlas = ExtResource("5_axm57")
region = Rect2(106, 0, 53, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_egy2a"]
atlas = ExtResource("5_axm57")
region = Rect2(159, 0, 53, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yb3re"]
atlas = ExtResource("5_axm57")
region = Rect2(212, 0, 53, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lynjn"]
atlas = ExtResource("5_axm57")
region = Rect2(265, 0, 53, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhtw5"]
atlas = ExtResource("5_axm57")
region = Rect2(318, 0, 53, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqmy1"]
atlas = ExtResource("5_axm57")
region = Rect2(371, 0, 53, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mhch"]
atlas = ExtResource("6_jaofj")
region = Rect2(0, 0, 73, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_6k0ij"]
atlas = ExtResource("6_4hhcv")
region = Rect2(160, 0, 80, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdggv"]
atlas = ExtResource("6_4hhcv")
region = Rect2(0, 0, 80, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8ak4"]
atlas = ExtResource("6_4hhcv")
region = Rect2(80, 0, 80, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjgc2"]
atlas = ExtResource("6_4hhcv")
region = Rect2(240, 0, 80, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmxae"]
atlas = ExtResource("6_4hhcv")
region = Rect2(320, 0, 80, 86)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiwll"]
atlas = ExtResource("6_4hhcv")
region = Rect2(160, 0, 80, 86)

[sub_resource type="SpriteFrames" id="SpriteFrames_nr1ei"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_al4ul")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_n0fk2")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_rq665")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_egy2a")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_yb3re")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_lynjn")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_qhtw5")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_eqmy1")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_0mhch")
}],
"loop": false,
"name": &"collapse",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_6k0ij")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_xdggv")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_f8ak4")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_bjgc2")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_hmxae")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_hiwll")
}],
"loop": false,
"name": &"shake",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_p24o0"]
atlas = ExtResource("9_ihiuv")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v5ff"]
atlas = ExtResource("9_ihiuv")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5a4l7"]
atlas = ExtResource("9_ihiuv")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhnlm"]
atlas = ExtResource("9_ihiuv")
region = Rect2(100, 100, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_2polt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p24o0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v5ff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5a4l7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhnlm")
}],
"loop": true,
"name": &"pulse",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_5lrv4"]
atlas = ExtResource("11_pw7i6")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_csfq3"]
atlas = ExtResource("11_pw7i6")
region = Rect2(60, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sl65"]
atlas = ExtResource("11_pw7i6")
region = Rect2(120, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbn3a"]
atlas = ExtResource("11_pw7i6")
region = Rect2(180, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_ou8lo"]
atlas = ExtResource("11_pw7i6")
region = Rect2(240, 0, 60, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_x484p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lrv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_csfq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sl65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbn3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ou8lo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ax8n7"]
atlas = ExtResource("12_ifdj0")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhg30"]
atlas = ExtResource("13_gdg0n")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkv8u"]
atlas = ExtResource("14_onel5")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm3nn"]
atlas = ExtResource("15_28rd8")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_egbla"]
atlas = ExtResource("16_arfr6")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ect6w"]
atlas = ExtResource("17_dxtmf")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_fippq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax8n7")
}],
"loop": false,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhg30")
}],
"loop": false,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkv8u")
}],
"loop": false,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm3nn")
}],
"loop": false,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_egbla")
}],
"loop": false,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ect6w")
}],
"loop": false,
"name": &"6",
"speed": 5.0
}]

[node name="main" type="Node2D"]
script = ExtResource("1_e6bej")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(574, 323)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_l6b0e")
rendering_quadrant_size = 64
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 1, 131072, 0, 2, 196608, 0, 3, 262144, 0, 4, 327680, 0, 5, 393216, 0, 6, 458752, 0, 7, 524288, 0, 8, 589824, 0, 9, 1, 65536, 0, 65537, 65536, 1, 131073, 65536, 2, 196609, 65536, 3, 262145, 65536, 4, 327681, 65536, 5, 393217, 65536, 6, 458753, 65536, 7, 524289, 65536, 8, 589825, 65536, 9, 2, 131072, 0, 65538, 131072, 1, 131074, 131072, 2, 196610, 131072, 3, 262146, 131072, 4, 327682, 131072, 5, 393218, 131072, 6, 458754, 131072, 7, 524290, 131072, 8, 589826, 131072, 9, 3, 196608, 0, 65539, 196608, 1, 131075, 196608, 2, 196611, 196608, 3, 262147, 196608, 4, 327683, 196608, 5, 393219, 196608, 6, 458755, 196608, 7, 524291, 196608, 8, 589827, 196608, 9, 4, 262144, 0, 65540, 262144, 1, 131076, 262144, 2, 196612, 262144, 3, 262148, 262144, 4, 327684, 262144, 5, 393220, 262144, 6, 458756, 262144, 7, 524292, 262144, 8, 589828, 262144, 9, 5, 327680, 0, 65541, 327680, 1, 131077, 327680, 2, 196613, 327680, 3, 262149, 327680, 4, 327685, 327680, 5, 393221, 327680, 6, 458757, 327680, 7, 524293, 327680, 8, 589829, 327680, 9, 6, 393216, 0, 65542, 393216, 1, 131078, 393216, 2, 196614, 393216, 3, 262150, 393216, 4, 327686, 393216, 5, 393222, 393216, 6, 458758, 393216, 7, 524294, 393216, 8, 589830, 393216, 9, 7, 458752, 0, 65543, 458752, 1, 131079, 458752, 2, 196615, 458752, 3, 262151, 458752, 4, 327687, 458752, 5, 393223, 458752, 6, 458759, 458752, 7, 524295, 458752, 8, 589831, 458752, 9, 8, 524288, 0, 65544, 524288, 1, 131080, 524288, 2, 196616, 524288, 3, 262152, 524288, 4, 327688, 524288, 5, 393224, 524288, 6, 458760, 524288, 7, 524296, 524288, 8, 589832, 524288, 9, 9, 589824, 0, 65545, 589824, 1, 131081, 589824, 2, 196617, 589824, 3, 262153, 589824, 4, 327689, 589824, 5, 393225, 589824, 6, 458761, 589824, 7, 524297, 589824, 8, 589833, 589824, 9, 10, 655360, 0, 65546, 655360, 1, 131082, 655360, 2, 196618, 655360, 3, 262154, 655360, 4, 327690, 655360, 5, 393226, 655360, 6, 458762, 655360, 7, 524298, 655360, 8, 589834, 655360, 9, 11, 720896, 0, 65547, 720896, 1, 131083, 720896, 2, 196619, 720896, 3, 262155, 720896, 4, 327691, 720896, 5, 393227, 720896, 6, 458763, 720896, 7, 524299, 720896, 8, 589835, 720896, 9, 12, 786432, 0, 65548, 786432, 1, 131084, 786432, 2, 196620, 786432, 3, 262156, 786432, 4, 327692, 786432, 5, 393228, 786432, 6, 458764, 786432, 7, 524300, 786432, 8, 589836, 786432, 9, 13, 851968, 0, 65549, 851968, 1, 131085, 851968, 2, 196621, 851968, 3, 262157, 851968, 4, 327693, 851968, 5, 393229, 851968, 6, 458765, 851968, 7, 524301, 851968, 8, 589837, 851968, 9, 14, 917504, 0, 65550, 917504, 1, 131086, 917504, 2, 196622, 917504, 3, 262158, 917504, 4, 327694, 917504, 5, 393230, 917504, 6, 458766, 917504, 7, 524302, 917504, 8, 589838, 917504, 9, 15, 983040, 0, 65551, 983040, 1, 131087, 983040, 2, 196623, 983040, 3, 262159, 983040, 4, 327695, 983040, 5, 393231, 983040, 6, 458767, 983040, 7, 524303, 983040, 8, 589839, 983040, 9, 16, 1048576, 0, 65552, 1048576, 1, 131088, 1048576, 2, 196624, 1048576, 3, 262160, 1048576, 4, 327696, 1048576, 5, 393232, 1048576, 6, 458768, 1048576, 7, 524304, 1048576, 8, 589840, 1048576, 9, 17, 1114112, 0, 65553, 1114112, 1, 131089, 1114112, 2, 196625, 1114112, 3, 262161, 1114112, 4, 327697, 1114112, 5, 393233, 1114112, 6, 458769, 1114112, 7, 524305, 1114112, 8, 589841, 1114112, 9)

[node name="TileMap2" type="TileMap" parent="."]
visible = false
tile_set = SubResource("TileSet_1y2bj")
rendering_quadrant_size = 64
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 1, 131072, 0, 2, 196608, 0, 3, 262144, 0, 4, 327680, 0, 5, 393216, 0, 6, 458752, 0, 7, 524288, 0, 8, 1, 65536, 0, 65537, 65536, 1, 131073, 65536, 2, 196609, 65536, 3, 262145, 65536, 4, 327681, 65536, 5, 393217, 65536, 6, 458753, 65536, 7, 524289, 65536, 8, 2, 131072, 0, 65538, 131072, 1, 131074, 131072, 2, 196610, 131072, 3, 262146, 131072, 4, 327682, 131072, 5, 393218, 131072, 6, 458754, 131072, 7, 524290, 131072, 8, 3, 196608, 0, 65539, 196608, 1, 131075, 196608, 2, 196611, 196608, 3, 262147, 196608, 4, 327683, 196608, 5, 393219, 196608, 6, 458755, 196608, 7, 524291, 196608, 8, 4, 262144, 0, 65540, 262144, 1, 131076, 262144, 2, 196612, 262144, 3, 262148, 262144, 4, 327684, 262144, 5, 393220, 262144, 6, 458756, 262144, 7, 524292, 262144, 8, 5, 327680, 0, 65541, 327680, 1, 131077, 327680, 2, 196613, 327680, 3, 262149, 327680, 4, 327685, 327680, 5, 393221, 327680, 6, 458757, 327680, 7, 524293, 327680, 8, 6, 393216, 0, 65542, 393216, 1, 131078, 393216, 2, 196614, 393216, 3, 262150, 393216, 4, 327686, 393216, 5, 393222, 393216, 6, 458758, 393216, 7, 524294, 393216, 8, 7, 458752, 0, 65543, 458752, 1, 131079, 458752, 2, 196615, 458752, 3, 262151, 458752, 4, 327687, 458752, 5, 393223, 458752, 6, 458759, 458752, 7, 524295, 458752, 8, 8, 524288, 0, 65544, 524288, 1, 131080, 524288, 2, 196616, 524288, 3, 262152, 524288, 4, 327688, 524288, 5, 393224, 524288, 6, 458760, 524288, 7, 524296, 524288, 8, 9, 589824, 0, 65545, 589824, 1, 131081, 589824, 2, 196617, 589824, 3, 262153, 589824, 4, 327689, 589824, 5, 393225, 589824, 6, 458761, 589824, 7, 524297, 589824, 8, 10, 655360, 0, 65546, 655360, 1, 131082, 655360, 2, 196618, 655360, 3, 262154, 655360, 4, 327690, 655360, 5, 393226, 655360, 6, 458762, 655360, 7, 524298, 655360, 8, 11, 720896, 0, 65547, 720896, 1, 131083, 720896, 2, 196619, 720896, 3, 262155, 720896, 4, 327691, 720896, 5, 393227, 720896, 6, 458763, 720896, 7, 524299, 720896, 8, 12, 786432, 0, 65548, 786432, 1, 131084, 786432, 2, 196620, 786432, 3, 262156, 786432, 4, 327692, 786432, 5, 393228, 786432, 6, 458764, 786432, 7, 524300, 786432, 8, 13, 851968, 0, 65549, 851968, 1, 131085, 851968, 2, 196621, 851968, 3, 262157, 851968, 4, 327693, 851968, 5, 393229, 851968, 6, 458765, 851968, 7, 524301, 851968, 8, 14, 917504, 0, 65550, 917504, 1, 131086, 917504, 2, 196622, 917504, 3, 262158, 917504, 4, 327694, 917504, 5, 393230, 917504, 6, 458766, 917504, 7, 524302, 917504, 8, 15, 983040, 0, 65551, 983040, 1, 131087, 983040, 2, 196623, 983040, 3, 262159, 983040, 4, 327695, 983040, 5, 393231, 983040, 6, 458767, 983040, 7, 524303, 983040, 8, 16, 1048576, 0, 65552, 1048576, 1, 131088, 1048576, 2, 196624, 1048576, 3, 262160, 1048576, 4, 327696, 1048576, 5, 393232, 1048576, 6, 458768, 1048576, 7, 524304, 1048576, 8, 17, 1114112, 0, 65553, 1114112, 1, 131089, 1114112, 2, 196625, 1114112, 3, 262161, 1114112, 4, 327697, 1114112, 5, 393233, 1114112, 6, 458769, 1114112, 7, 524305, 1114112, 8, 589824, 0, 9, 589825, 65536, 9, 589826, 131072, 9, 589827, 196608, 9, 589828, 262144, 9, 589829, 327680, 9, 589830, 393216, 9, 589831, 458752, 9, 589832, 524288, 9, 589833, 589824, 9, 589834, 655360, 9, 589835, 720896, 9, 589836, 786432, 9, 589837, 851968, 9, 589838, 917504, 9, 589839, 983040, 9, 589840, 1048576, 9, 589841, 1114112, 9)

[node name="pathSpawner" type="Node2D" parent="."]
position = Vector2(-3, 4)
script = ExtResource("2_w5tr5")

[node name="Timer" type="Timer" parent="pathSpawner"]
autostart = true

[node name="hud" parent="." instance=ExtResource("4_ygiq2")]

[node name="home" type="AnimatedSprite2D" parent="."]
position = Vector2(856, 56)
scale = Vector2(1.6, 1.6)
sprite_frames = SubResource("SpriteFrames_nr1ei")
animation = &"shake"

[node name="installLocation1" parent="." instance=ExtResource("7_nspia")]
offset_left = 816.0
offset_top = 400.0
offset_right = 909.0
offset_bottom = 473.0

[node name="installLocation2" parent="." instance=ExtResource("7_nspia")]
offset_left = 552.0
offset_top = 440.0
offset_right = 642.0
offset_bottom = 515.0

[node name="installLocation3" parent="." instance=ExtResource("7_nspia")]
offset_left = 248.0
offset_top = 456.0
offset_right = 341.0
offset_bottom = 529.0

[node name="installLocation4" parent="." instance=ExtResource("7_nspia")]
offset_left = 936.0
offset_top = 216.0
offset_right = 1024.0
offset_bottom = 295.0

[node name="installLocation5" parent="." instance=ExtResource("7_nspia")]
offset_left = 680.0
offset_top = 48.0
offset_right = 774.0
offset_bottom = 127.0

[node name="AnimatedHeart" type="AnimatedSprite2D" parent="."]
position = Vector2(246, 65)
sprite_frames = SubResource("SpriteFrames_2polt")
animation = &"pulse"
autoplay = "pulse"

[node name="Dollar" type="Sprite2D" parent="."]
position = Vector2(53, 60)
texture = ExtResource("10_5q32s")

[node name="AnimatedFlag" type="AnimatedSprite2D" parent="."]
position = Vector2(59, 143)
sprite_frames = SubResource("SpriteFrames_x484p")
autoplay = "default"

[node name="levelNumber" type="AnimatedSprite2D" parent="."]
position = Vector2(90, 151)
sprite_frames = SubResource("SpriteFrames_fippq")
animation = &"1"

[node name="Timer1" type="Timer" parent="."]

[node name="Finger" type="Sprite2D" parent="."]
position = Vector2(360, 296)
texture = ExtResource("18_mst1w")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="pathSpawner/Timer" to="pathSpawner" method="_on_timer_timeout"]
[connection signal="timeout" from="Timer1" to="." method="_on_timer_1_timeout"]
